--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="arabe, comida, sfija, empanada, toya, postres-arabes, comidsa arabes">
+<meta name="description" content="La toya comidas, uno de los pocos lugares con recetas pura y exclusivamente traidas desde Siria">
   <title>LA TOYA</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -12,9 +14,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="body-index">
+<body>
   <header class="bg-white">
-    <div class="p-3 mb-2 bg-dark text-white">
+    <div class="bg-dark text-white">
       <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,11 +47,11 @@
   </header>
   </div>
   <main class="main_index">
-    <div class="p-3 mb-2 bg-warning text-dark">
+    <div class="bg-warning text-dark">
       <h1 class="text-center">La Toya Comidas</h1>
       <div class="d-flex justify-content-center">
         <img src="./src/multimedia/Imagenes/decoracion.jpg"
-          class="rounded float-start img-fluid img-thumbnail rounded-start" width="450px" height="450px"
+          class="rounded float-start img-fluid img-thumbnail rounded-start" width="650px" height="mx-auto"
           alt="decoracion">
         <p class="text-center">Hay que resaltar que el concepto de comida en los países árabes está íntimamente ligado
           al
@@ -61,7 +63,7 @@
           días de ayuno), quitando la particularidad de la religión, las costumbres y el culto de la comida se acercan
           más
           a las de cada país árabe.</p>
-        <img src="./src/multimedia/Imagenes/postres-arabes.jpg" width="350px" height="350px"
+        <img src="./src/multimedia/Imagenes/cafe.jpg" width="650px" height="450px"
           class="rounded float-end img-fluid rounded-top" alt="postres-arabes">
       </div>
     </div>
