--- a/src/Paginas/comidas.html
+++ b/src/Paginas/comidas.html
@@ -2,78 +2,100 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comidas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/6a989e0a5b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="comidas arabes, postres arabes, sfija, empanada arabe, keppe, niños envueltos">
+  <meta name="description" content="La mas rica comida arabe de La Rioja la encontraras aqui">
+  <title>Comidas</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/6a989e0a5b.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
 
 </head>
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a href="/Clase1/index.html">Inicio</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="nav navbar-nav navbar-left mx-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="comidas.html">Nuestros productos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contactanos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ubicacion.html">Como llegar</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="quienesSomos.html">Quienes somos?</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
 <header class="header_comidas">
-
-    <body>
-
-        <div class="card-group text-center container">
-            <div class="card">
-                <img src="../multimedia/Imagenes/niñosenvueltos.jpg" class="card-img-top" alt="niñosenvueltos"
-                    width="50px" height="575px">
-                <div class="card-body">
-                    <h1 class="card-title">Niñitos envueltos</h1>
-                    <h3>$1200</h3>
-                    <a href="./" class="btn btn-success">Agregar al carrito</a>
-
-                </div>
-            </div>
-            <div class="card text-center container">
-                <img src="../multimedia/Imagenes/sfija1.jpg" class="card-img-top" width="50px" height="575px" alt="toya">
-                <div class="card-body">
-                    <h1 class="card-title">Sfija</h1>
-                    <h3>$1200</h3>
-                    <a href="" class="btn btn-success">Agregar al carrito</a>
-
-                </div>
-            </div>
-            <div class="card text-center container">
-                <img src="../multimedia/Imagenes/keppe.jpg" class="card-img-top" width="100px" height="575px" alt="toya">
-                <div class="card-body">
-                    <h1 class="card-title">Keppe cocido</h1>
-                    <h3>$1500</h3>
-                    <a href="" class="btn btn-success">Agregar al carrito</a>
-
-                </div>
-            </div>
+  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a href="../../index.html">Inicio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="nav navbar-nav navbar-left mx-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="comidas.html">Nuestros productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contactanos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ubicacion.html">Como llegar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="quienesSomos.html">Quienes somos?</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
-</script>
-</div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+
+
+<body class="body-comidas">
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="col">
+      <div class="card">
+        <img src="../multimedia/Imagenes/sfija1.jpg" class="card-img-top" width="300px" height="auto" alt="sfija1">
+        <div class="card-body">
+          <h5 class="card-title">Sfija</h5>
+          <p class="card-text">La especialidad de la casa, nuestras famosas empanadas arabes mejor conocidas como
+            "sfija"</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="../multimedia/Imagenes/keppe.jpg" class="card-img-top" width="300px" height="auto" alt="keppe">
+        <div class="card-body">
+          <h5 class="card-title">Keppe Cocido</h5>
+          <p class="card-text">Carne, cebolla, trigo y queso</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="../multimedia/Imagenes/niños.jpg" class="card-img-top" width="300px" height="auto" alt="niños">
+        <div class="card-body">
+          <h5 class="card-title">Niñitos envueltos</h5>
+          <p class="card-text">Hoja de parra, tambien podes probar los de repollo, por dentro contienen arroz y carne
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="../multimedia/Imagenes/empanada-abierta.jpg" class="card-img-top" width="300px" height="auto"
+          alt="sfija-abierta">
+        <div class="card-body">
+          <h5 class="card-title">Sfija abierta<h5>
+              <p class="card-text">La empanada arabe pero abierta, le da otro sabor, ya las probaste?</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="../multimedia/Imagenes/kebab.jpg" class="card-img-top" width="auto" height="auto" alt="kebab">
+      <div class="card-body">
+        <h5 class="card-title">Kebab<h5>
+            <p class="card-text">Carne, perejil y cebolla</p>
+      </div>
+    </div>
+  </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    < /body>
+  </script>
+</body>
