--- a/src/Paginas/contacto.html
+++ b/src/Paginas/contacto.html
@@ -4,61 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Llamanos, contactanos, whatsapp, instagram, facebook">
+    <meta name="description" content="Dejanos tus datos y te tomamos tu pedido">
     <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6a989e0a5b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <i class="fa-solid fa-arrows-turn-right"></i>
+    <ul>
+        <li>
+            <a href="../../index.html">inicio</a>
+        </li>
+    </ul>
+</header>
+<nav>
+</nav>
 
 <body class="body_contacto">
-    <header>
-        <nav>
-            <i class="fa-solid fa-arrows-turn-right"></i>
-            <ul>
-                <li>
-                    <a href="/Clase1/index.html">Inicio</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="input-group">
-            <span class="input-group-text">Nombre y apellido</span>
-            <input type="text" aria-label="First name" class="form-control">
-            <input type="text" aria-label="Last name" class="form-control">
+    <form action="" method="post" id="form">
+        <div class="form">
+            <h1 class="h1-contacto">Registro</h1>
+            <div class="grupo">
+                <input type="text" name="" id="name" required><span class="barra"></span>
+                <label for="">Nombre</label>
+            </div>
         </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Pedido</span>
-            <input type="text" class="form-control" aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-default">
+        <div class="grupo">
+            <input type="email" name="" id="name" required><span class="barra"></span>
+            <label for="">Email</label>
         </div>
-        <div class="input-group mb-3">
-            <button class="btn btn-outline-secondary" type="button">Retiro por el local</button>
-            <button class="btn btn-outline-secondary" type="button">Envio a domicilio</button>
-            <input type="text" class="form-control" placeholder="Si es envio a domicilio, indique el mismo aqui"
-                aria-label="Example text with two button addons">
+        <div class="grupo">
+            <input type="password" name="" id="name" required><span class="barra"></span>
+            <label for="">Contraseña</label>
         </div>
-        <div class="input-group mb-3">
-            <label class="input-group-text" for="inputGroupSelect01">Metodos de pago</label>
-            <select class="form-select" id="inputGroupSelect01">
-                <option selected>Como abonas?</option>
-                <option value="1">Efectivo</option>
-                <option value="2">Transferencia</option>
-                <option value="3">Mercado pago</option>
-            </select>
-        </div>
-
-    </main>
-    <div class="p-3 mb-2 bg-dark text-white">
-        <footer class="footer_index">
-            <p class="fs-3">Podes encontrarnos en nuestras redes sociales, Facebook, Instagram o bien, Whatsapp</p>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
-        </footer>
+        <button type="submit">Registrarte</button>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+    </form>
+    <footer>
+        <div class="p-3 mb-2 bg-dark text-white">
+            <footer class="footer_index">
+                <p class="fs-3">Podes encontrarnos en nuestras redes sociales, Facebook, Instagram o bien, Whatsapp</p>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-whatsapp"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </footer>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
 </body>
