--- a/src/Paginas/quienesSomos.html
+++ b/src/Paginas/quienesSomos.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="conocenos, historias arabes, arabe, comidas arabes">
+    <meta name="description" content="Quienes somos, como surgimos en este rubro, aca conoceras nuestra historia personal">
     <title>quienes somos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,7 +19,7 @@
         <div>
             <nav>
                 <ul>
-                   <a href="/Clase1/index.html">inicio</a>
+                   <a href="../../index.html">inicio</a>
                 </ul>
             </nav>
             <main class="quienes-somos">
