--- a/src/Paginas/ubicacion.html
+++ b/src/Paginas/ubicacion.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Ubicacion, donde estamos, encontrar, buscar">
+    <meta name="description" content="Aqui encontraras la ubicacion de nuestro local">
     <title>Ubicacion</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -13,7 +15,7 @@
 
 <body>
     <nav class="nav_ubicacion">
-        <a href="/Clase1/index.html"><button type="button" class="btn btn-primary btn-lg">inicio</button></a>
+        <a href="../../index.html"><button type="button" class="btn btn-primary btn-lg">inicio</button></a>
     </nav>
     <div class="d-flex align-items-center">
         <iframe
