--- a/index.html
+++ b/index.html
@@ -6,79 +6,98 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="arabe, comida, sfija, empanada, toya, postres-arabes, comidsa arabes">
-<meta name="description" content="La toya comidas, uno de los pocos lugares con recetas pura y exclusivamente traidas desde Siria">
+  <meta name="description"
+    content="La toya comidas, uno de los pocos lugares con recetas pura y exclusivamente traidas desde Siria">
   <title>LA TOYA</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/6a989e0a5b.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+  <div class="p-3 mb-2 bg-warning text-dark">
+    <img src="./src/multimedia/Imagenes/logo.jpg" class="rounded mx-auto d-block rounded-circle" width="150px"
+      height="150px" alt="logotoya">
+  </div>
   <header class="bg-white">
     <div class="bg-dark text-white">
       <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="nav navbar-nav navbar-left mx-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./src/Paginas/comidas.html">Nuestros productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./src/Paginas/contacto.html">Contactanos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./src/Paginas/ubicacion.html">Como llegar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./src/Paginas/quienesSomos.html">Quienes somos?</a>
-              </li>
-            </ul>
-          </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="nav navbar-nav navbar-left mx-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./src/Paginas/comidas.html">Nuestros productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/Paginas/contacto.html">Contactanos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/Paginas/preguntasfrecuentes.html">Preguntas Frecuentes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./src/Paginas/quienesSomos.html">Quienes somos?</a>
+            </li>
+          </ul>
+        </div>
       </nav>
-      <img src="./src/multimedia/Imagenes/logo.jpg" class="rounded mx-auto d-block rounded-circle" width="150px"
-        height="150px" alt="logotoya">
-    </div>
-
   </header>
-  </div>
-  <main class="main_index">
-    <div class="bg-warning text-dark">
-      <h1 class="text-center">La Toya Comidas</h1>
-      <div class="d-flex justify-content-center">
-        <img src="./src/multimedia/Imagenes/decoracion.jpg"
-          class="rounded float-start img-fluid img-thumbnail rounded-start" width="650px" height="mx-auto"
-          alt="decoracion">
-        <p class="text-center">Hay que resaltar que el concepto de comida en los países árabes está íntimamente ligado
-          al
-          de
-          Hospitalidad,
-          en muchos de los casos servir una comida al invitado es una oportunidad de hacerle la honra. No se puede
-          olvidar
-          que en la mayoría de los países el islam marca unos ritos precisos acerca de cuándo se debe comer (Ramadán o
-          días de ayuno), quitando la particularidad de la religión, las costumbres y el culto de la comida se acercan
-          más
-          a las de cada país árabe.</p>
-        <img src="./src/multimedia/Imagenes/cafe.jpg" width="650px" height="450px"
-          class="rounded float-end img-fluid rounded-top" alt="postres-arabes">
+  <main>
+    <div class="p-3 mb-2 bg-dark text-white">
+      <p> Los orígenes de la cocina árabe se remontan a los pueblos nómadas de la antigua Arabia, dedicados al pastoreo,
+        convirtiéndose en un pueblo consumidor de lácteos y sus derivados como quesos, yogurt, etc. Por otro lado la
+        carne
+        que se consumía y que aún se acostumbra es la de carnero. La de aves y rumiantes es menos frecuente</p>
+      <p>Debido a sus relaciones comerciales entre Asía y Europa, los árabes fueron incorporando nuevos ingredientes en
+        su gastronomía, volviéndola más diversa. De ahí que compartan ingredientes o técnicas con la comida hindú y
+        mediterránea. Sin embargo, la cocina árabe tiene características que la hacen destacar, mediante sus mezclas
+        equilibrada de especias y vegetales</p>
+    </div>
+    <div class="p-3 mb-2 bg-secondary text-white">
+      <div class="d-flex position-relative">
+        <span class="border border-1">
+          <img src="./src/multimedia/Imagenes/cafe.jpg" class="flex-shrink-0" alt="cafe">
+        </span>
+        <div>
+          <h5 class="mt-0">Sabias que el cafe proviene de Asia?</h5>
+          <p>Durante unos 200 años tuvieron la exclusiva del cultivo y comercio de café ya que tenían especial cuidado
+            en
+            no propagar granos fértiles de café. Les quitaban las capas exteriores y los tostaban para el comercio. Así
+            pues, era misión imposible plantar un cafeto (la planta del café) en territorios que no estuvieran bajo la
+            influencia árabe.</p>
+          <p>Holanda fue la responsable que empezara el cultivo de café en Asia y partes de América que actualmente son
+            los mayores productores de café del mundo.</p>
+          <button>
+            <a href="./src/Paginas/quienesSomos.html">Veni a conocernos</a>
+          </button>
+        </div>
       </div>
     </div>
   </main>
+  <section>
+    <div class="p-3 mb-2 bg-secondary text-white">
+    <h3 class="text-end">Nos encontramos en calle buenos aires, numero 166, puerta de madera, tocar timbre</h3>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3475.456854627402!2d-66.85819578437459!3d-29.415441109266407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427dbcab57f940d%3A0x9042202b8f8ac5b2!2sBuenos%20Aires%20166%2C%20F5300%20La%20Rioja!5e0!3m2!1ses-419!2sar!4v1659695877732!5m2!1ses-419!2sar"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="d-flex justify-content-end">
+      <i class="fa-solid fa-car"></i>
+    </div>
+    </div>
+  </section>
   <footer>
-    <div class="p-3 mb-2 bg-dark text-white">
-      <p class="text-info bg-dark text-center">Podes encontrarnos en nuestras redes sociales, Facebook, Instagram o
-        bien, Whatsapp</p>
+    <div class="container-fluid p-3 mb-2 bg-warning text-dark text-center">
+      <p class="small">&copy; Todos los derechos reservados :: La Toya Comidas :: Argentina 2022</p>
       <i class="fa-brands fa-facebook"></i>
       <i class="fa-brands fa-whatsapp"></i>
       <i class="fa-brands fa-instagram"></i>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+      </script>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-  </script>
   </div>
-
 </body>
