--- a/src/Paginas/contacto.html
+++ b/src/Paginas/contacto.html
@@ -10,8 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6a989e0a5b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
+<h1 class="h1-contacto">hola soy german
+</h1>
 <header>
     <i class="fa-solid fa-arrows-turn-right"></i>
     <ul>
@@ -41,15 +43,25 @@
             <label for="">Contraseña</label>
         </div>
         <button type="submit">Registrarte</button>
-    </div>
+        </div>
     </form>
     <footer>
-        <div class="p-3 mb-2 bg-dark text-white">
+        <div class="container-fluid bg-black text-center p-3">
             <footer class="footer_index">
                 <p class="fs-3">Podes encontrarnos en nuestras redes sociales, Facebook, Instagram o bien, Whatsapp</p>
                 <i class="fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-whatsapp"></i>
                 <i class="fa-brands fa-instagram"></i>
+            </footer>
+            <footer>
+                <p class="small">&copy; Todos los derechos reservados :: La Toya Comidas :: Argentina 2022</p>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-whatsapp"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                    crossorigin="anonymous">
+                </script>
             </footer>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
