--- a/src/Paginas/quienesSomos.html
+++ b/src/Paginas/quienesSomos.html
@@ -6,25 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="conocenos, historias arabes, arabe, comidas arabes">
-    <meta name="description" content="Quienes somos, como surgimos en este rubro, aca conoceras nuestra historia personal">
+    <meta name="description"
+        content="Quienes somos, como surgimos en este rubro, aca conoceras nuestra historia personal">
     <title>quienes somos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6a989e0a5b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
     <header class="header_qs">
-        <div>
+       
             <nav>
-                <ul>
-                   <a href="../../index.html">inicio</a>
-                </ul>
+                <button>
+                    <span>
+                        <a href="../../index.html">INICIO</a>
+                    </span>
+                  </button>
             </nav>
             <main class="quienes-somos">
-                <img src="../multimedia/Imagenes/decoraciondecocina.jpg" alt="decoraciondecocina" width="450px"
-                    height="auto">
+            
+                <div class="p-3 mb-2 bg-dark text-white">
                 <p class="lead text-center">
                     Somos Mari y Gerardo, comenzamos en este rubro durante el periodo de la pandemia, con muchas
                     incertidumbres aunque, tambien, con esperanza, porque no sabiamos lo que nos deparaba el futuro,
@@ -33,32 +36,41 @@
                     u la otra no nos decidiamos, hoy estamos aca, con nuestros queridos clientes, que mas que clientes
                     son amigos, que deciden compartir con nosotros nuestras ricas y bien caseras comidas arabes! gracias
                     por visitarnos.
+                    Mari es descendiente de los pueblos de siria, ya que sus padres provienen de ahi, nuestra tia,
+                    Toya, emigro hacia Argentina durante la epoca de la guerra, que, desde entonces, vivio con
+                    nuestra familia en donde nos inculco varias culturas arabes, entre ellas, la comida y sus
+                    recetas unicas.
                 </p>
-                <iframe width="500" height="auto" src="https://www.youtube.com/embed/fWdL-MhJuMM"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-                <div>
-                    <figure class="text-end">
-                        <blockquote class="blockquote">
-                            <p class="parrafo-qs"> No se puede cocinar bien si no se pone en ello el corazón, dado que
-                                por encima de todo
-                                se trata de que reinen en torno a la mesa sentimientos de amistad y de fraternidad</p>
-                        </blockquote>
-                        <figcaption class="blockquote-footer">
-                            Fernand Point<cite title="Source Title"></cite>
-                        </figcaption>
-                    </figure>
+                <div class="text-center">
+                    <img src="../multimedia/Imagenes/decoraciondecocina.jpg" class="rounded" alt="decoraciondecocina" width="400px" height="400px">
+                  </div>
+                  <figure class="text-end">
+                      <blockquote class="blockquote">
+                          <p class="parrafo-qs"> No se puede cocinar bien si no se pone en ello el corazón, dado que
+                              por encima de todo
+                              se trata de que reinen en torno a la mesa sentimientos de amistad y de fraternidad</p>
+                            </blockquote>
+                            <figcaption class="blockquote-footer">
+                                Fernand Point<cite title="Source Title"></cite>
+                            </figcaption>
+                        </figure>
+                    </div>
                 </div>
+            </div>
             </main>
             </footer>
     </header>
+    <div class="p-3 mb-2 bg-danger text-white">
     <footer class="footer_index">
-        <p class="fs-3">Podes encontrarnos en nuestras redes sociales, Facebook, Instagram o bien, Whatsapp</p>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-whatsapp"></i>
-        <i class="fa-brands fa-instagram"></i>
+        <div class="container-fluid text-center">
+            <p class="small">&copy; Todos los derechos reservados :: La Toya Comidas :: Argentina 2022</p>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-instagram"></i>
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
