--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="p-3 mb-2 bg-warning text-dark">
+  <div class="p-1 mb-1 bg-warning text-dark">
     <img src="./src/multimedia/Imagenes/logo.jpg" class="rounded mx-auto d-block rounded-circle" width="150px"
       height="150px" alt="logotoya">
   </div>
@@ -46,8 +46,8 @@
       </nav>
   </header>
   <main>
-    <div class="p-3 mb-2 bg-dark text-white">
-      <p> Los orígenes de la cocina árabe se remontan a los pueblos nómadas de la antigua Arabia, dedicados al pastoreo,
+    <div class="p-1 mb-1 bg-dark text-white">
+      <p class="p_index"> Los orígenes de la cocina árabe se remontan a los pueblos nómadas de la antigua Arabia, dedicados al pastoreo,
         convirtiéndose en un pueblo consumidor de lácteos y sus derivados como quesos, yogurt, etc. Por otro lado la
         carne
         que se consumía y que aún se acostumbra es la de carnero. La de aves y rumiantes es menos frecuente</p>
@@ -56,7 +56,7 @@
         mediterránea. Sin embargo, la cocina árabe tiene características que la hacen destacar, mediante sus mezclas
         equilibrada de especias y vegetales</p>
     </div>
-    <div class="p-3 mb-2 bg-secondary text-white">
+    <div class="p-1 mb-1 bg-secondary text-white">
       <div class="d-flex position-relative">
         <span class="border border-1">
           <img src="./src/multimedia/Imagenes/cafe.jpg" class="flex-shrink-0" alt="cafe">
@@ -71,7 +71,7 @@
           <p>Holanda fue la responsable que empezara el cultivo de café en Asia y partes de América que actualmente son
             los mayores productores de café del mundo.</p>
           <button>
-            <a href="./src/Paginas/quienesSomos.html">Veni a conocernos</a>
+            <a href="./src/Paginas/quienesSomos.html">VENI</a>
           </button>
         </div>
       </div>
@@ -79,7 +79,7 @@
   </main>
   <section>
     <div class="p-3 mb-2 bg-secondary text-white">
-    <h3 class="text-end">Nos encontramos en calle buenos aires, numero 166, puerta de madera, tocar timbre</h3>
+    <h4 class="text-end">Nos encontramos en calle buenos aires, numero 166, puerta de madera, tocar timbre</h3>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3475.456854627402!2d-66.85819578437459!3d-29.415441109266407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427dbcab57f940d%3A0x9042202b8f8ac5b2!2sBuenos%20Aires%20166%2C%20F5300%20La%20Rioja!5e0!3m2!1ses-419!2sar!4v1659695877732!5m2!1ses-419!2sar"
       width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
