--- a/src/Paginas/comidas.html
+++ b/src/Paginas/comidas.html
@@ -42,60 +42,75 @@
   </nav>
 </header>
 
-
-<body class="body-comidas">
-  <div class="row row-cols-1 row-cols-md-2 g-4">
-    <div class="col">
-      <div class="card">
-        <img src="../multimedia/Imagenes/sfija1.jpg" class="card-img-top" width="300px" height="auto" alt="sfija1">
-        <div class="card-body">
-          <h5 class="card-title">Sfija</h5>
-          <p class="card-text">La especialidad de la casa, nuestras famosas empanadas arabes mejor conocidas como
-            "sfija"</p>
+<body>
+  <div class="p-3 mb-2 bg-secondary text-white">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../multimedia/Imagenes/sfija1.jpg" class="card-img-top" alt="sfija" width="300px" height="300px">
+          <div class="card-body">
+            <h5 class="card-title">sfija</h5>
+            <p class="card-text">Empanada arabe, condimentos especiales, carne, cebolla y tomate</p>
+            <a href="#" class="btn btn-primary">Agregar al carrito</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../multimedia/Imagenes/empanada-abierta.jpg" class="card-img-top" alt="sfija_abierta" width="300px" height="300px">
+          <div class="card-body">
+            <h5 class="card-title">Sfija abierta</h5>
+            <p class="card-text">Empanada arabe abierta, le da otro sabor, ya las probaste?</p>
+            <a href="#" class="btn btn-primary">Agregar al carrito</a>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col">
-      <div class="card">
-        <img src="../multimedia/Imagenes/keppe.jpg" class="card-img-top" width="300px" height="auto" alt="keppe">
-        <div class="card-body">
-          <h5 class="card-title">Keppe Cocido</h5>
-          <p class="card-text">Carne, cebolla, trigo y queso</p>
+    <div class="row">
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../multimedia/Imagenes/niñosenvueltos.jpg" class="card-img-top" alt="niñosenvueltos" width="300px" height="300px">
+          <div class="card-body">
+            <h5 class="card-title">Niños envueltos</h5>
+            <p class="card-text">Hojas de parra, arroz y carne</p>
+            <a href="#" class="btn btn-primary">Agregar al carrito</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../multimedia/Imagenes/niños.jpg" class="card-img-top" width="300px" height="auto" alt="niños">
-        <div class="card-body">
-          <h5 class="card-title">Niñitos envueltos</h5>
-          <p class="card-text">Hoja de parra, tambien podes probar los de repollo, por dentro contienen arroz y carne
-          </p>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../multimedia/Imagenes/keppe.jpg" class="card-img-top" alt="keppe" width="300px" height="300px">
+          <div class="card-body">
+            <h5 class="card-title">keppe</h5>
+            <p class="card-text">Trigo, carne, cebolla y queso</p>
+            <a href="#" class="btn btn-primary">Agregar al carrito</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="../multimedia/Imagenes/empanada-abierta.jpg" class="card-img-top" width="300px" height="auto"
-          alt="sfija-abierta">
-        <div class="card-body">
-          <h5 class="card-title">Sfija abierta<h5>
-              <p class="card-text">La empanada arabe pero abierta, le da otro sabor, ya las probaste?</p>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../multimedia/Imagenes/kebab.jpg" class="card-img-top" alt="kebab" width="300px" height="300px">
+          <div class="card-body">
+            <h5 class="card-title">Kebab</h5>
+            <p class="card-text">Carne asada, cebolla, tomate y morrones</p>
+            <a href="#" class="btn btn-primary">Agregar al carrito</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card">
-      <img src="../multimedia/Imagenes/kebab.jpg" class="card-img-top" width="auto" height="auto" alt="kebab">
-      <div class="card-body">
-        <h5 class="card-title">Kebab<h5>
-            <p class="card-text">Carne, perejil y cebolla</p>
-      </div>
-    </div>
-  </div>
-  </div>
+</div>
+<div class="p-3 mb-2 bg-secondary text-white">
+<ul class="list-group list-group-flush">
+  <li class="list-group-item text-center">Empandas arabes-1 docena $1400</li>
+  <li class="list-group-item text-center">Niños envueltos-$1200 la porcion</li>
+  <li class="list-group-item text-center">Kebab - $1200 la docena</li>
+  <li class="list-group-item text-center">Keppe - $1400 la porcion</li>
+</ul>
+</div>
   <footer>
+    <div class="p-3 mb-2 bg-warning text-dark">
     <div class="container-fluid bg-white text-center p-3">
       <p class="small">&copy; Todos los derechos reservados :: La Toya Comidas :: Argentina 2022</p>
       <i class="fa-brands fa-facebook"></i>
@@ -106,4 +121,5 @@
       </script>
   </footer>
   </div>
+</div>
 </body>
