--- a/src/Paginas/contacto.html
+++ b/src/Paginas/contacto.html
@@ -12,49 +12,42 @@
     <script src="https://kit.fontawesome.com/6a989e0a5b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/style.css">
 </head>
-<h1 class="h1-contacto">hola soy german
-</h1>
 <header>
+    <div class="p-3 mb-2 bg-info text-dark">
     <i class="fa-solid fa-arrows-turn-right"></i>
     <ul>
         <li>
             <a href="../../index.html">inicio</a>
         </li>
     </ul>
+</div>
 </header>
 <nav>
 </nav>
 
 <body class="body_contacto">
-    <form action="" method="post" id="form">
-        <div class="form">
-            <h1 class="h1-contacto">Registro</h1>
-            <div class="grupo">
-                <input type="text" name="" id="name" required><span class="barra"></span>
-                <label for="">Nombre</label>
-            </div>
+    <form>
+        <div class="p-3 mb-2 bg-info text-dark">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Coloca tu mail</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">No compartiremos tu cuenta con nadie.</div>
         </div>
-        <div class="grupo">
-            <input type="email" name="" id="name" required><span class="barra"></span>
-            <label for="">Email</label>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <div class="grupo">
-            <input type="password" name="" id="name" required><span class="barra"></span>
-            <label for="">Contraseña</label>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Registrarme</label>
         </div>
-        <button type="submit">Registrarte</button>
-        </div>
-    </form>
-    <footer>
-        <div class="container-fluid bg-black text-center p-3">
-            <footer class="footer_index">
-                <p class="fs-3">Podes encontrarnos en nuestras redes sociales, Facebook, Instagram o bien, Whatsapp</p>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-whatsapp"></i>
-                <i class="fa-brands fa-instagram"></i>
-            </footer>
+        <button type="submit" class="btn btn-primary">Subscribirse</button>
+      </form>
+    </div>
+    </div>
+</div>
             <footer>
-                <p class="small">&copy; Todos los derechos reservados :: La Toya Comidas :: Argentina 2022</p>
+                <p class="small text-center">&copy; Todos los derechos reservados :: La Toya Comidas :: Argentina 2022</p>
                 <i class="fa-brands fa-facebook"></i>
                 <i class="fa-brands fa-whatsapp"></i>
                 <i class="fa-brands fa-instagram"></i>
