--- a/src/Paginas/preguntasfrecuentes.html
+++ b/src/Paginas/preguntasfrecuentes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Ubicacion, donde estamos, encontrar, buscar">
+    <meta name="keywords" content="Preguntas, preguntas frecuentes, como trabajamos">
     <meta name="description" content="Aqui encontraras la ubicacion de nuestro local">
     <title>PREGUNTAS FRECUENTES</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,19 +16,20 @@
 <body class="body_pf">
     <div class="p-3 mb-2 bg-dark text-white">
     <header>
-        <h1 class="h1_pf">PREGUNTAS FRECUENTES</h1>
-       <nav>
-       </nav>
+        <nav>
+            <li><a href="../../index.html">Inicio</a></li>
+        </nav>
+        <h1 class="h1_pf text-center">PREGUNTAS FRECUENTES</h1>
     </header>
     <main>
-        <h2>¿Tienen un local para ir a comer ahi?</h2>
-        <p>No disponemos actualmente de un local, tomamos directamente los pedidos para que pasen a retirar o llevamos a
+        <h2 class="text-center">¿Tienen un local para ir a comer ahi?</h2>
+        <p class="text-center">No disponemos actualmente de un local, tomamos directamente los pedidos para que pasen a retirar o llevamos a
             domicilio!</p>
-        <h2>¿Abren dias feriados?</h2>
-        <p>Si hacen los pedidos con tiempo, entregamos comidas los dias feriados, recuerden que deben si o si realizar
+        <h2 class="text-center">¿Abren dias feriados?</h2>
+        <p class="text-center">Si hacen los pedidos con tiempo, entregamos comidas los dias feriados, recuerden que deben si o si realizar
             el pedido con un dia de anticipacion en caso de que sea feriado</p>
-        <h2>Hacen comidas para vegetarianos?</h2>
-        <p>Lamentablemente solo cocinamos con alimentos tradicionales, pero posiblemente en un futuro hagamos comida para vegetarianos tambien!</p>
+        <h2 class="text-center">Hacen comidas para vegetarianos?</h2>
+        <p class="text-center">Lamentablemente solo cocinamos con alimentos tradicionales, pero posiblemente en un futuro hagamos comida para vegetarianos tambien!</p>
 
 
     </main>
