--- a/src/Paginas/comidas.html
+++ b/src/Paginas/comidas.html
@@ -12,114 +12,235 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/6a989e0a5b.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../../css/style.css">
-
 </head>
-<header class="header_comidas">
-  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a href="../../index.html">Inicio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="nav navbar-nav navbar-left mx-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="comidas.html">Nuestros productos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contacto.html">Contactanos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ubicacion.html">Como llegar</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="quienesSomos.html">Quienes somos?</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
 
 <body>
-  <div class="p-3 mb-2 bg-secondary text-white">
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="card" style="width: 18rem;">
-          <img src="../multimedia/Imagenes/sfija1.jpg" class="card-img-top" alt="sfija" width="300px" height="300px">
-          <div class="card-body">
-            <h5 class="card-title">sfija</h5>
-            <p class="card-text">Empanada arabe, condimentos especiales, carne, cebolla y tomate</p>
-            <a href="#" class="btn btn-primary">Agregar al carrito</a>
-          </div>
-        </div>
+  <!-- HEADER -->
+
+  <header>
+    <!-- BARRA DE NAVEGACION -->
+
+    <div class="caja_nav">
+
+      <nav>
+        <a href="../../index.html"><img class="img_logo rounded-circle" src="../multimedia/Imagenes/logo.jpg"
+            alt="logotoya"></a>
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="../Paginas/contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../../src/Paginas/quienesSomos.html">Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../Paginas/preguntasfrecuentes.html">Preguntas frecuentes</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!-- /****** MAIN ******/ -->
+
+  <!-- SECCION DE IMAGENES -->
+
+  <main class="main_comidas">
+    <h1 class="h1_comidas">Nuestras comidas:</h1>
+    <div class="container-img">
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/keppe.jpg" alt="keppe">
+          </figure>
+        </a>
       </div>
-      <div class="col">
-        <div class="card" style="width: 18rem;">
-          <img src="../multimedia/Imagenes/empanada-abierta.jpg" class="card-img-top" alt="sfija_abierta" width="300px" height="300px">
-          <div class="card-body">
-            <h5 class="card-title">Sfija abierta</h5>
-            <p class="card-text">Empanada arabe abierta, le da otro sabor, ya las probaste?</p>
-            <a href="#" class="btn btn-primary">Agregar al carrito</a>
-          </div>
-        </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/keppefrito.jpg" alt="keppefrito">
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <figure>
+          <img src="../multimedia/Imagenes/keppe-sfija.jpg" alt="keppe-sfija">
+        </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/tabule.jpg" alt="tabule">
+          </figure>
+        </a>
+      </div>
+
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/kebab.jpg" alt="kebab">
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/niñosenvueltos-elaboracion.jpg" alt="niñosenvueltos-elaboracion">
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/mjemmer.jpg" alt="mjemmer">
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/niñosenvueltos.jpg" alt="niñosenvueltos">
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/sfija1.jpg" alt="sfija">
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/picada.jpg" alt="picada">
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/pizza-arabe.jpg" alt="pizza-arabe">
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/mamul.jpg" alt="mamul">
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/pastademorron.jpg" alt="pastademorron">
+          </figure>
+        </a>
+      </div>
+      <div class="box-img">
+        <a href="">
+          <figure>
+            <img src="../multimedia/Imagenes/labne-oregano.jpg" alt="labne-oregano">
+          </figure>
+        </a>
       </div>
     </div>
-    <div class="row">
-      <div class="col">
-        <div class="card" style="width: 18rem;">
-          <img src="../multimedia/Imagenes/niñosenvueltos.jpg" class="card-img-top" alt="niñosenvueltos" width="300px" height="300px">
-          <div class="card-body">
-            <h5 class="card-title">Niños envueltos</h5>
-            <p class="card-text">Hojas de parra, arroz y carne</p>
-            <a href="#" class="btn btn-primary">Agregar al carrito</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card" style="width: 18rem;">
-          <img src="../multimedia/Imagenes/keppe.jpg" class="card-img-top" alt="keppe" width="300px" height="300px">
-          <div class="card-body">
-            <h5 class="card-title">keppe</h5>
-            <p class="card-text">Trigo, carne, cebolla y queso</p>
-            <a href="#" class="btn btn-primary">Agregar al carrito</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card" style="width: 18rem;">
-          <img src="../multimedia/Imagenes/kebab.jpg" class="card-img-top" alt="kebab" width="300px" height="300px">
-          <div class="card-body">
-            <h5 class="card-title">Kebab</h5>
-            <p class="card-text">Carne asada, cebolla, tomate y morrones</p>
-            <a href="#" class="btn btn-primary">Agregar al carrito</a>
-          </div>
-        </div>
-      </div>
+  </main>
+
+  <!-- SECTION -->
+
+  <section class="menu_toya">
+    <table class="table table-dark table-striped">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Comidas</th>
+          <th scope="col">Precios</th>
+          <th scope="col">Variantes</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Empanadas arabes</td>
+          <td>$1500 la docena</td>
+          <td>Abiertas/Cerradas</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Mayemmer</td>
+          <td>$1500 la docena</td>
+          <td>Carne/Queso</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Keppe</td>
+          <td>$1400 (Porcion)</td>
+          <td>Fritos/Al horno</td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td>Pures/Pastas</td>
+          <td>$400</td>
+          <td>Morron/Hummus/Berenjena/Laven</td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td>Niños envueltos</td>
+          <td>$800 (Porcion)</td>
+          <td>-</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Direccion de E-mail</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
     </div>
-  </div>
-</div>
-<div class="p-3 mb-2 bg-secondary text-white">
-<ul class="list-group list-group-flush">
-  <li class="list-group-item text-center">Empandas arabes-1 docena $1400</li>
-  <li class="list-group-item text-center">Niños envueltos-$1200 la porcion</li>
-  <li class="list-group-item text-center">Kebab - $1200 la docena</li>
-  <li class="list-group-item text-center">Keppe - $1400 la porcion</li>
-</ul>
-</div>
-  <footer>
-    <div class="p-3 mb-2 bg-warning text-dark">
-    <div class="container-fluid bg-white text-center p-3">
-      <p class="small">&copy; Todos los derechos reservados :: La Toya Comidas :: Argentina 2022</p>
-      <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-whatsapp"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-      </script>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Pedido a realizar</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+    <select class="form-select" aria-label="Default select example">
+      <option selected>Selecciona una de las siguientes casillas</option>
+      <option value="1">Envio a domicilio</option>
+      <option value="2">Paso a retirar</option>
+    </select>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault">
+        Pago con efectivo
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+      <label class="form-check-label" for="flexCheckChecked">
+        Pago mediante transferencia bancaria/Mercado Pago
+      </label>
+      <img src="../multimedia/Imagenes/graciasporsucompra.jpg" class="img-fluid rounded mx-auto d-block" alt="imagen-agradecimiento">
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+
+  <footer class="footer-distributed">
+    <div class="footer-left">
+      <a href="../../index.html"><img src="../../src/multimedia/Imagenes/logo.jpg" alt="logotoya"
+          class="rounded-circle"></a>
+      <p class="footer-company-name">La Toya Comidas © 2022</p>
+      <div class="footer-icons">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-whatsapp"></i>
+
+
+      </div>
+
+    </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    </div>
   </footer>
-  </div>
-</div>
 </body>
