--- a/src/Paginas/contacto.html
+++ b/src/Paginas/contacto.html
@@ -1,63 +1,106 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Llamanos, contactanos, whatsapp, instagram, facebook">
-    <meta name="description" content="Dejanos tus datos y te tomamos tu pedido">
-    <title>Contacto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/6a989e0a5b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Llamanos, contactanos, whatsapp, instagram, facebook">
+  <meta name="description" content="Dejanos tus datos y te tomamos tu pedido">
+  <title>Contacto</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/6a989e0a5b.js" crossorigin="anonymous"></script>
+  <link href='https://fonts.googleapis.com/css?family=Ubuntu:500' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="../../css/style.css">
 </head>
-<header>
-    <div class="p-3 mb-2 bg-info text-dark">
-    <i class="fa-solid fa-arrows-turn-right"></i>
-    <ul>
-        <li>
-            <a href="../../index.html">inicio</a>
-        </li>
-    </ul>
-</div>
-</header>
-<nav>
-</nav>
 
 <body class="body_contacto">
-    <form>
-        <div class="p-3 mb-2 bg-info text-dark">
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Coloca tu mail</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">No compartiremos tu cuenta con nadie.</div>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Registrarme</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Subscribirse</button>
+
+  <!-- HEADER -->
+
+  <header class="header_index">
+
+    <!-- NAV -->
+
+    <nav>
+      <div class="caja_nav">
+        <a href="../../index.html"><img class="img_logo rounded-circle" src="../../src/multimedia/Imagenes/logo.jpg"
+            alt="logotoya"></a>
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../../src/Paginas/comidas.html">Nuestros productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../../src/Paginas/quienesSomos.html">Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../../src/Paginas/preguntasfrecuentes.html">Preguntas frecuentes</a>
+          </li>
+        </ul>
+    </nav>
+    </div>
+  </header>
+
+  <!-- MAIN -->
+
+  <main class="main">
+    <figure class="main__figure">
+      <img src="../multimedia/Imagenes/ILUSTRACION.JPG.svg" class="main__img">
+    </figure>
+
+    <div class="main__contact">
+
+      <h2 class="main__title">Hola!!!</h2>
+
+      <p class="main__paragraph">Bienvenido/a a la Toya Comidas!</p>
+
+      <form class="main__form">
+
+        <input type="text" placeholder="Ingresa un nombre de usuario" class="main__input">
+
+        <input type="password" placeholder="Contraseña" class="main__input">
+
+        <input type="submit" value="Inscribirse" class="main__input main__input--send">
+
       </form>
+
+      </article>
+
     </div>
-    </div>
-</div>
-            <footer>
-                <p class="small text-center">&copy; Todos los derechos reservados :: La Toya Comidas :: Argentina 2022</p>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-whatsapp"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                    crossorigin="anonymous">
-                </script>
-            </footer>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        </script>
+
+
+  </main>
+
+  <!-- FOOTER -->
+
+  <div class="footer-dark">
+    <footer class="footer_contacto">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 col-md-3 item">
+            <h3>Servicios</h3>
+            <ul>
+              <li><a href="../Paginas/comidas.html">Nuestros productos</a></li>
+              <li><a href="../Paginas/preguntasfrecuentes.html">Preguntas frecuentes</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-6 col-md-3 item">
+            <h3>Acerca de</h3>
+            <ul>
+              <li><a href="../Paginas/quienesSomos.html">Empresa</a></li>
+            </ul>
+          </div>
+          <div class="col-md-6 item text">
+            <h3>La Toya Comidas</h3>
+            <p>Encuentra las mejores comidas arabes de la provincia</p>
+          </div>
+        <p class="copyright">La Toya Comidas © 2022</p>
+      </div>
+    </footer>
+  </div>
+  </div>
+  </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
