--- a/src/Paginas/comidas.html
+++ b/src/Paginas/comidas.html
@@ -40,184 +40,96 @@
     </div>
   </header>
   <!-- /****** MAIN ******/ -->
-
-  <!-- SECCION DE IMAGENES -->
-
   <main class="main_comidas">
     <h1 class="h1_comidas">Nuestras comidas:</h1>
-    <div class="container-img">
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/keppe.jpg" alt="keppe">
-          </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/keppefrito.jpg" alt="keppefrito">
-          </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <figure>
-          <img src="../multimedia/Imagenes/keppe-sfija.jpg" alt="keppe-sfija">
-        </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/tabule.jpg" alt="tabule">
-          </figure>
-        </a>
+    <div class="row">
+      <div class="column">
+        <img alt="photo 1" src="../multimedia/Imagenes/keppe.jpg" />
+        <h3>Keppe, tambien puedes probar el frito</h3>
+        <button class="button_comidas">
+          <h4>$1400 (Porcion)</h4>
+        </button>
+        <img alt="photo 2" src="../multimedia/Imagenes/keppe-sfija.jpg" />
+        <h3>Keppe y empanadas arabes, una combinacion perfecta</h3>
+        <img alt="photo 3" src="../multimedia/Imagenes/tabule.jpg" />
+        <h3>Tabule, una ensalada tipica de Siria</h3>
+        <button class="button_comidas">
+          <h4>$800 (Pote)</h4>
+        </button>
+        <img alt="photo 4" src="../multimedia/Imagenes/kebab.jpg" />
+        <h3>Kebab, una carne con ingredientes especiales</h3>
+        <button class="button_comidas">
+          <h4>$1400 (Docena)</h4>
+        </button>
       </div>
 
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/kebab.jpg" alt="kebab">
-          </figure>
-        </a>
+      <div class="column">
+        <img alt="photo 1" src="../multimedia/Imagenes/sfija1.jpg" />
+        <h3>Empanadas arabes, conocidas como "sfijas"</h3>
+        <button class="button_comidas">
+          <h4>$1500 (Docena)</h4>
+        </button>
+        <img alt="photo 2" src="../multimedia/Imagenes/niñosenvueltos-elaboracion.jpg" />
+        <h3>Nuestros riquisimos niños envueltos</h3>
+        <button class="button_comidas">
+          <h4>$1400 (Porcion)</h4>
+        </button>
+        <img alt="photo 3" src="../multimedia/Imagenes/mjemmer.jpg" />
+        <h3>Nuestras empanadas mjemmer, riquisimas</h3>
+        <button class="button_comidas">
+          <h4>$1400 (Docena)</h4>
+        </button>
+        <img alt="photo 4" src="../multimedia/Imagenes/niñosenvueltos.jpg" />
+        <button class="button_comidas">
+          <h3>Asi les entregamos los niños envueltos a nuestros clientes!</h3>
+        </button>
       </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/niñosenvueltos-elaboracion.jpg" alt="niñosenvueltos-elaboracion">
-          </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/mjemmer.jpg" alt="mjemmer">
-          </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/niñosenvueltos.jpg" alt="niñosenvueltos">
-          </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/sfija1.jpg" alt="sfija">
-          </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/picada.jpg" alt="picada">
-          </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/pizza-arabe.jpg" alt="pizza-arabe">
-          </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/mamul.jpg" alt="mamul">
-          </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/pastademorron.jpg" alt="pastademorron">
-          </figure>
-        </a>
-      </div>
-      <div class="box-img">
-        <a href="">
-          <figure>
-            <img src="../multimedia/Imagenes/labne-oregano.jpg" alt="labne-oregano">
-          </figure>
-        </a>
+
+      <div class="column">
+        <img alt="photo 1" src="../multimedia/Imagenes/picada.jpg" />
+        <h3>Una picada tipica arabe, ideal para compartir con amigos/familia</h3>
+        <button class="button_comidas">
+          <h4>Consultar por Whatsapp</h4>
+        </button>
+        <img alt="photo 2" src="../multimedia/Imagenes/pizza-arabe.jpg" />
+        <h3>Una pizza arabe, ya las probaste?</h3>
+        <button class="button_comidas">
+          <h4>Consultar por Whatsapp</h4>
+        </button>
+        <img alt="photo 3" src="../multimedia/Imagenes/mamul.jpg" />
+        <h3>Un postre arabe, con nueces y azucar, riquisimo!</h3>
+        <button class="button_comidas">
+          <h4>$1400 (Docena)</h4>
+        </button>
       </div>
     </div>
   </main>
-
-  <!-- SECTION -->
-
-  <section class="menu_toya">
-    <table class="table table-dark table-striped">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Comidas</th>
-          <th scope="col">Precios</th>
-          <th scope="col">Variantes</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Empanadas arabes</td>
-          <td>$1500 la docena</td>
-          <td>Abiertas/Cerradas</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Mayemmer</td>
-          <td>$1500 la docena</td>
-          <td>Carne/Queso</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Keppe</td>
-          <td>$1400 (Porcion)</td>
-          <td>Fritos/Al horno</td>
-        </tr>
-        <tr>
-          <th scope="row">4</th>
-          <td>Pures/Pastas</td>
-          <td>$400</td>
-          <td>Morron/Hummus/Berenjena/Laven</td>
-        </tr>
-        <tr>
-          <th scope="row">5</th>
-          <td>Niños envueltos</td>
-          <td>$800 (Porcion)</td>
-          <td>-</td>
-        </tr>
-      </tbody>
-    </table>
-
+  <section class="box section_comidas">
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Direccion de E-mail</label>
       <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
     </div>
-    <div class="mb-3">
+    <div class="box mb-3">
       <label for="exampleFormControlTextarea1" class="form-label">Pedido a realizar</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
     <select class="form-select" aria-label="Default select example">
-      <option selected>Selecciona una de las siguientes casillas</option>
+      <option selected>Indicar</option>
       <option value="1">Envio a domicilio</option>
       <option value="2">Paso a retirar</option>
     </select>
-    <div class="form-check">
+    <div class="box1 form-check">
       <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
       <label class="form-check-label" for="flexCheckDefault">
         Pago con efectivo
       </label>
     </div>
-    <div class="form-check">
+    <div class="box2 form-check">
       <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
       <label class="form-check-label" for="flexCheckChecked">
         Pago mediante transferencia bancaria/Mercado Pago
       </label>
-      <img src="../multimedia/Imagenes/graciasporsucompra.jpg" class="img-fluid rounded mx-auto d-block" alt="imagen-agradecimiento">
+    </div>
     </div>
   </section>
 
