--- a/src/Paginas/contacto.html
+++ b/src/Paginas/contacto.html
@@ -71,6 +71,16 @@
 
   </main>
 
+  <!-- SECTION -->
+
+  <section class="section_contacto">
+    <h3>Nos encontramos en calle Buenos Aires 166, puerta de madera, en diagonal al supermercado Mayor Express</h3>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3475.456854627402!2d-66.85819578437459!3d-29.415441109266407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9427dbcab57f940d%3A0x9042202b8f8ac5b2!2sBuenos%20Aires%20166%2C%20F5300%20La%20Rioja!5e0!3m2!1ses-419!2sar!4v1661266876648!5m2!1ses-419!2sar"
+      width="300px" height="300px" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </section>
+
   <!-- FOOTER -->
 
   <div class="footer-dark">
@@ -94,8 +104,8 @@
             <h3>La Toya Comidas</h3>
             <p>Encuentra las mejores comidas arabes de la provincia</p>
           </div>
-        <p class="copyright">La Toya Comidas © 2022</p>
-      </div>
+          <p class="copyright">La Toya Comidas © 2022</p>
+        </div>
     </footer>
   </div>
   </div>
